<resources>
    <!-- Strings related to login -->
    <string name="prompt_email">아이디</string>
    <string name="prompt_password">비밀번호</string>

    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>

    <!-- Strings related to login -->
    <string name="Login_image">로그인 화면 이미지입니다.</string>
    <string name="login_text">로그인</string>
    <string name="login_info_text">한국성서대학교 커뮤니티</string>
    <string name="login_find_password_text">비밀번호를 잊으셨나요?</string>
    <string name="login_signup_info_text">아직 회원가입하지 않았나요?</string>
    <string name="login_signup_text">회원가입</string>
    <string name="login_fail_info">아이디 또는 비밀번호가 유효하지 않습니다.</string>



    <string name="intranet_login_info_text">한국성서대학교 인트라넷 로그인</string>
    <string name="intranet_login_later_title">나중에 로그인하기</string>

    <string name="singup_title">회원가입✏️</string>
    <string name="singup_text">사용하실 계정 정보를 작성해주세요\n입력된 정보를 암호화 처리되어 사용자만 볼 수 있습니다.</string>
    <string name="find_info_title_text">비밀번호 찾기🔐</string>
    <string name="find_info_text">비밀번호를 재설정하기 위해 코드를 인증해야합니다.\n사용자 이메일을 입력해주세요</string>
    <string name="login_email">\@bible.ac.kr</string>
    <string name="find_email_send_button">확인코드 발송</string>

    <string name="find_verify_title">비밀번호 찾기📩</string>
    <string name="find_verify_info_text">입력하신 이메일로 인증 코드를 발송했습니다.\n이메일을 확인해주세요📬</string>
    <string name="find_verify_email_title">이메일 확인 코드</string>
    <string name="find_verify_continue_button">계속하기</string>
    <string name="find_passwd_title">비밀번호 변경🔑</string>
    <string name="find_passwd_text">비밀번호를 재설정하기 위해 코드를 인증해야합니다.\n사용자 이메일을 입력해주세요</string>
    <string name="notice_in_button">이동하기</string>
    <string name="singup_password_text">비밀번호</string>
    <string name="singup_nickname_text">닉네임</string>
    <string name="singup_id_text">ID</string>
    <string name="singup_password_verify_text">비밀번호 확인</string>
    <string name="singup_email_text">email</string>
    <string name="singup_bible_email_text">가입된 학교 이메일</string>
    <string name="singup_email_verify_text">이메일 확인코드</string>
    <string name="singup_email_code_text">확인코드</string>
    <string name="singup_verify_code_send_text">확인코드 발송</string>
    <string name="singup_next_text">계속하기</string>
    <string name="rothem_notice_text">로뎀나무 공지사항</string>


    <string name="intranet_info_text">한국성서대학교 인트라넷 로그인이 필요합니다.\n재학중인 학생임을 확인하는 절차로 학번을 조회합니다.\n인트라넷 로그인 정보는 어디에든 저장되지 않으며\n로그인 이후에는 더 이상 로그인 하지 않습니다.</string>
</resources>