<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

    </data>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.space.core_ui.view.SpaceLoginEditView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="30dp">

            <com.space.core_ui.view.SpaceLoginEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/prompt_email"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/password" />
        </com.space.core_ui.view.SpaceLoginEditView>

        <com.space.core_ui.view.SpaceLoginEditView
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp">

            <com.space.core_ui.view.SpaceLoginEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/prompt_password"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"/>
        </com.space.core_ui.view.SpaceLoginEditView>

        <TextView
            android:id="@+id/login_fail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/login_fail_info"
            android:textColor="@color/red"
            android:textStyle="normal"
            android:visibility="gone" />
    </LinearLayout>
</layout>