<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.space.shared.model.LoginModel" />

        <variable
            name="viewModel"
            type="com.space.signin.ui.login.LoginViewModel" />

        <variable
            name="onClick"
            type="com.space.core_ui.util.NonParamsItemHandler" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <com.space.core_ui.view.SpaceLinearLayout
            android:id="@+id/login_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            tools:context=".ui.auth.login.LoginFragment">

            <ImageView
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:contentDescription="@string/Login_image"
                app:srcCompat="@drawable/ic_space" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:text="@string/login_text"
                android:textColor="@color/blackTitle"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/login_info_text"
                android:textColor="@color/blackTitle"
                android:textSize="14sp" />

            <com.space.core_ui.view.SpaceLoginEditView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.space.core_ui.view.SpaceLoginEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:autofillHints="@string/prompt_email"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/password"
                    android:text="@={viewModel.username}" />
            </com.space.core_ui.view.SpaceLoginEditView>

            <com.space.core_ui.view.SpaceLoginEditView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.space.core_ui.view.SpaceLoginEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:autofillHints="@string/prompt_password"
                    android:hint="@string/prompt_password"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text="@={viewModel.passwd}" />
            </com.space.core_ui.view.SpaceLoginEditView>

            <TextView
                android:id="@+id/login_fail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login_fail_info"
                android:textColor="@color/red"
                android:textStyle="normal"
                android:visibility="gone"
                app:inputStatus="@{viewModel.loginState}" />

            <com.space.core_ui.view.SpaceGreenButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_20dp"
                app:onLoginListener="@{onClick}">

                <com.space.core_ui.view.SpaceLoginCardViewText
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:text="@string/login_text" />
            </com.space.core_ui.view.SpaceGreenButton>

            <TextView
                android:id="@+id/findPwText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_20dp"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/login_find_password_text"
                android:textAlignment="center"
                android:textSize="14sp"
                android:textStyle="normal" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/singup_button"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="45dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp"
                    app:strokeColor="@color/greenBackground"
                    app:strokeWidth="1dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="새 계정 만들기"
                        android:textColor="@color/DarkGreenBackGround"
                        android:textSize="@dimen/main_text2"
                        android:textStyle="bold" />
                </com.google.android.material.card.MaterialCardView>
            </FrameLayout>

        </com.space.core_ui.view.SpaceLinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>
