<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:contentDescription="@string/Login_image"
            android:paddingBottom="130dp"
            android:scaleType="center"
            app:srcCompat="@drawable/ig_intranet_info_vector" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom|center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="인트라넷 로그인"
                android:textAlignment="center"
                android:textColor="@color/blackTitle"
                android:textSize="@dimen/title_text2"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="15dp"
                android:gravity="center"
                android:text="@string/intranet_info_text"
                android:textAlignment="center"
                android:textColor="@color/blackTitle"
                android:textSize="@dimen/main_text3"
                android:textStyle="normal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_margin="50dp"
                android:columnCount="2">

                <TextView
                    android:id="@+id/login_later"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="나중에"
                    android:textAlignment="center"
                    android:textColor="@color/blackTitle"
                    android:textSize="@dimen/main_text3" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/login_button"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginStart="30dp"
                    android:layout_weight="1"
                    app:cardBackgroundColor="@color/greenBackground"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:foreground="?attr/selectableItemBackground"
                        android:text="@string/login_text"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>
</layout>
